<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B28743"
    android:orientation="vertical"
    android:padding="5dp" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/cafe_find_layout" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/details_name_header"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#dcdcdc" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="Adres:"
                        android:textSize="18dp" />

                    <Button
                        android:id="@+id/btnRating"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_weight="2"
                        android:background="@drawable/button_rating_selector"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvStreet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="25dp"
                        android:text="Medium Text"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#dcdcdc" />

                    <TextView
                        android:id="@+id/tvBuilding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignWithParentIfMissing="true"
                        android:layout_marginTop="25dp"
                        android:layout_toRightOf="@id/tvStreet"
                        android:paddingLeft="5dp"
                        android:text="Medium Text"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#d2d2d2" />

                    <TextView
                        android:id="@+id/tvLocal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignWithParentIfMissing="true"
                        android:layout_marginTop="25dp"
                        android:layout_toRightOf="@id/tvBuilding"
                        android:paddingLeft="5dp"
                        android:text="Medium Text"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#dcdcdc" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dzielnica:"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/tvDistrict"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="25dp"
                        android:text="Medium Text"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#dcdcdc" />

                    <Button
                        android:id="@+id/btnTables"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="5dp"
                        android:layout_weight="2"
                        android:background="@drawable/button_back_selector"
                        android:drawableLeft="@drawable/ic_book"
                        android:drawablePadding="3dp"
                        android:text="STOLIKI"
                        android:visibility="gone" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Miasto:"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/tvCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="25dp"
                        android:text="Medium Text"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#dcdcdc" />

                    <Button
                        android:id="@+id/bMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="5dp"
                        android:layout_weight="2"
                        android:background="@drawable/button_back_selector"
                        android:drawableLeft="@drawable/menu_btn"
                        android:drawablePadding="3dp"
                        android:text="MENU"
                        android:visibility="gone" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/ivImage"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="CafeClub"
                    android:scaleType="fitCenter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:text="Telefon:"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="phone"
                    android:text="886 346 201"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColorLink="#dcdcdc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:text="Strona www:"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tvWebsite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="www.onet.pl"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColorLink="#dcdcdc" />

                <TextView
                    android:id="@+id/tvHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:text="Godziny otwarcia:"
                    android:textSize="18dp" />

                <TableLayout
                    android:id="@+id/tlHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TableRow
                        android:id="@+id/trMonday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/monday"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#dcdcdc" />

                        <TextView
                            android:id="@+id/tvMonday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#dcdcdc" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/trTuesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/tuesday"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#dcdcdc" />

                        <TextView
                            android:id="@+id/tvTuesday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#dcdcdc" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/trWednesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/wednesday"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#dcdcdc" />

                        <TextView
                            android:id="@+id/tvWednesday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#dcdcdc" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/trThursday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/thursday"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#dcdcdc" />

                        <TextView
                            android:id="@+id/tvThursday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#dcdcdc" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/trFriday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/friday"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#dcdcdc" />

                        <TextView
                            android:id="@+id/tvFriday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#dcdcdc" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/trSaturday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/saturday"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#dcdcdc" />

                        <TextView
                            android:id="@+id/tvSaturday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#dcdcdc" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/trSunday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/sunday"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#dcdcdc" />

                        <TextView
                            android:id="@+id/tvSunday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#dcdcdc" />
                    </TableRow>
                </TableLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:text="Opis:"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#dcdcdc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:text="Lokalizacja:"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/bLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/button_maps_selector"
                    android:drawablePadding="5dp"
                    android:text="GoogleMaps"
                    android:textColor="#dcdcdc" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>